Closed Bug 1795733 Opened 2 years ago Closed 2 years ago

Patterns on input elements with a multiple attribute aren't handled correctly

Categories

(Core :: DOM: Forms, defect)

defect

Tracking

()

RESOLVED FIXED
108 Branch
Tracking Status
firefox108 --- fixed

People

(Reporter: avandolder, Assigned: avandolder)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

Currently, the handling for input nodes with a pattern attribute set is unaware of the input multiple attribute, resulting in failures on the https://wpt.fyi/results/html/semantics/forms/constraints/form-validation-validity-patternMismatch.html web platform test.

Severity: -- → S3
Pushed by avandolder@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/345bdb426754
Add support for patterns on input elements with the multiple attribute. r=edgar
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 108 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: