Bug 1795733 - Add support for patterns on input elements with the multiple attribute. r=edgar

Differential Revision: https://phabricator.services.mozilla.com/D159523