dom/html/input/SingleLineTextInputTypes.cpp
@@ -81,7 +81,9 @@ Maybe<bool> SingleLineTextInputTypeBase::HasPatternMismatch() const {
   }
 
   Document* doc = mInputElement->OwnerDoc();
-  Maybe<bool> result = nsContentUtils::IsPatternMatching(value, pattern, doc);
+  Maybe<bool> result = nsContentUtils::IsPatternMatching(
+      value, pattern, doc,
+      mInputElement->HasAttr(kNameSpaceID_None, nsGkAtoms::multiple));
   return result ? Some(!*result) : Nothing();
 }
 
